--- a/frp/frpc.ini
+++ b/frp/frpc.ini
@@ -1,8 +1,8 @@
 [common]
-  server_addr = tibpszh9rfwu.usemoralis.com
+  server_addr = wciosc5v5doe.usemoralis.com
   server_port = 7000
-  token = hzkyy6392y
+  token = kUEUiuIbh2
 [hardhat]
   type = http
   local_port = 8545
-  custom_domains = tibpszh9rfwu.usemoralis.com
+  custom_domains = wciosc5v5doe.usemoralis.com
