--- a/package.json
+++ b/package.json
@@ -7,26 +7,23 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "moralis:sync": "moralis-admin-cli connect-local-devchain --chain hardhat --moralisSubdomain tibpszh9rfwu.usemoralis.com --frpcPath ./frp/frpc.exe",
-    "moralis:cloud": "moralis-admin-cli watch-cloud-folder --moralisSubdomain tibpszh9rfwu.usemoralis.com --autoSave 1 --moralisCloudfolder ./cloudFunctions"
+    "moralis:sync": "moralis-admin-cli connect-local-devchain --chain hardhat --moralisSubdomain lkei3yi1kglb.usemoralis.com --frpcPath ./frp/frpc",
+    "moralis:cloud": "moralis-admin-cli watch-cloud-folder --moralisSubdomain lkei3yi1kglb.usemoralis.com --autoSave 1 --moralisCloudfolder ./cloudFunctions"
   },
   "dependencies": {
-    "@web3auth/web3auth": "^1.1.0",
-    "magic-sdk": "7.0.0",
-    "moralis": "^1.8.0",
-    "next": "12.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-moralis": "^1.4.0",
-    "web3uikit": "^0.1.161"
+    "moralis": "^1.5.11",
+    "next": "12.1.5",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-moralis": "^1.3.5",
+    "web3uikit": "^0.0.133"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "dotenv": "^16.0.1",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
-    "init": "^0.1.2",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4"
+    "autoprefixer": "^10.4.5",
+    "dotenv": "^16.0.0",
+    "eslint": "8.14.0",
+    "eslint-config-next": "12.1.5",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24"
   }
 }
